Fix PrismJS codeblocks overflowing in comments section

--- a/assets/css/comments.css
+++ b/assets/css/comments.css
@@ -158,6 +158,10 @@
     /* color: darkorange; */
 }
 
+.post-comment-message div.highlight {
+    max-width: 100%;
+}
+
 .post-comment-footer {
     display: flex;
     justify-content: flex-end;
